Fix: searchbar overlapping issue

--- a/src/Components/NavBarPage/navbar.module.css
+++ b/src/Components/NavBarPage/navbar.module.css
@@ -3,11 +3,11 @@
 }
 .searchComponent {
   position: fixed;
-  height: 91.5vh;
+  height: 100vh;
   width: 100vw;
   bottom: 0px;
   background-color: white;
-  z-index: 10;
+  z-index: 9;
 }
 
 .navbarMain {
